[gd_scene load_steps=10 format=3 uid="uid://bnnjettts1l5q"]

[ext_resource type="Texture2D" uid="uid://b62bi4bqslsar" path="res://Assets/Ui/Theme/nine_path_3.png" id="1_bn63n"]
[ext_resource type="Script" path="res://Scenes/UI/straw_shop.gd" id="1_dl5ys"]
[ext_resource type="FontFile" uid="uid://dwtw786qbm6b7" path="res://Assets/MinecraftStandard.otf" id="2_pn3jg"]
[ext_resource type="LabelSettings" uid="uid://cg820l4knx6rb" path="res://Scenes/UI/Templates/UpgradeName.tres" id="3_hdreg"]
[ext_resource type="LabelSettings" uid="uid://df8dgdyhpyros" path="res://Scenes/UI/Templates/UpgradeDesc.tres" id="4_rruh3"]
[ext_resource type="PackedScene" uid="uid://bwp1ih2chikf4" path="res://Scenes/UI/buy_button.tscn" id="5_f702u"]
[ext_resource type="PackedScene" uid="uid://4y7j6bhj10o7" path="res://Scenes/UI/strawberryUI.tscn" id="6_dpurk"]
[ext_resource type="LabelSettings" uid="uid://dltsqqyendawn" path="res://Scenes/UI/Templates/price.tres" id="8_r68hc"]
[ext_resource type="StyleBox" uid="uid://cceuk3ryyk8eu" path="res://Scenes/UI/Templates/seperatorH.tres" id="9_yeq7a"]

[node name="StrawberryShop" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
script = ExtResource("1_dl5ys")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -401.0
offset_top = -216.0
offset_right = 399.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_bn63n")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 18.0
offset_right = -15.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
scroll_vertical = 106

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 11

[node name="Speed" type="HBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 288

[node name="SpeedDetails" type="VBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer/Speed"]
layout_mode = 2
theme_override_constants/separation = -4

[node name="SpeedTitle" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Speed/SpeedDetails"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_pn3jg")
theme_override_font_sizes/font_size = 18
text = "SPEED (0/30)"
label_settings = ExtResource("3_hdreg")

[node name="SpeedDesc" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Speed/SpeedDetails"]
layout_mode = 2
size_flags_vertical = 0
text = "Increases the player's movement speed."
label_settings = ExtResource("4_rruh3")

[node name="SpeedButton" parent="NinePatchRect/ScrollContainer/VBoxContainer/Speed" instance=ExtResource("5_f702u")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="Ui" parent="NinePatchRect/ScrollContainer/VBoxContainer/Speed/SpeedButton" instance=ExtResource("6_dpurk")]
position = Vector2(-97, -4)
scale = Vector2(0.333333, 0.333333)

[node name="SpeedPrice" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Speed/SpeedButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("8_r68hc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 5
theme_override_styles/separator = ExtResource("9_yeq7a")

[node name="Rate" type="HBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 228

[node name="RateDetails" type="VBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer/Rate"]
layout_mode = 2
theme_override_constants/separation = -4

[node name="RateTitle" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Rate/RateDetails"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_pn3jg")
theme_override_font_sizes/font_size = 18
text = "SPAWN RATE (0/15)"
label_settings = ExtResource("3_hdreg")

[node name="RateDesc" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Rate/RateDetails"]
layout_mode = 2
size_flags_vertical = 0
text = "Increase the rate at which strawberies spawn."
label_settings = ExtResource("4_rruh3")

[node name="RateButton" parent="NinePatchRect/ScrollContainer/VBoxContainer/Rate" instance=ExtResource("5_f702u")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="Ui" parent="NinePatchRect/ScrollContainer/VBoxContainer/Rate/RateButton" instance=ExtResource("6_dpurk")]
position = Vector2(-97, -4)
scale = Vector2(0.333333, 0.333333)

[node name="RatePrice" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Rate/RateButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("8_r68hc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 5
theme_override_styles/separator = ExtResource("9_yeq7a")

[node name="Range" type="HBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 261

[node name="RangeDetails" type="VBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer/Range"]
layout_mode = 2
theme_override_constants/separation = -4

[node name="RangeTitle" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Range/RangeDetails"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_pn3jg")
theme_override_font_sizes/font_size = 18
text = "GRAB RANGE (0/20)"
label_settings = ExtResource("3_hdreg")

[node name="RangeDesc" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Range/RangeDetails"]
layout_mode = 2
size_flags_vertical = 0
text = "Expands the radius at which the player can
grab fruits."
label_settings = ExtResource("4_rruh3")

[node name="RangeButton" parent="NinePatchRect/ScrollContainer/VBoxContainer/Range" instance=ExtResource("5_f702u")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="Ui" parent="NinePatchRect/ScrollContainer/VBoxContainer/Range/RangeButton" instance=ExtResource("6_dpurk")]
position = Vector2(-97, -4)
scale = Vector2(0.333333, 0.333333)

[node name="RangePrice" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Range/RangeButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("8_r68hc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 5
theme_override_styles/separator = ExtResource("9_yeq7a")

[node name="Size" type="HBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 230

[node name="SizeDetails" type="VBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer/Size"]
layout_mode = 2
theme_override_constants/separation = -4

[node name="SizeTitle" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Size/SizeDetails"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_pn3jg")
theme_override_font_sizes/font_size = 18
text = "FRUIT SIZE (0/2)"
label_settings = ExtResource("3_hdreg")

[node name="SizeDesc" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Size/SizeDetails"]
layout_mode = 2
size_flags_vertical = 0
text = "Increases the chance for a fruit to be bigger."
label_settings = ExtResource("4_rruh3")

[node name="SizeButton" parent="NinePatchRect/ScrollContainer/VBoxContainer/Size" instance=ExtResource("5_f702u")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="Ui" parent="NinePatchRect/ScrollContainer/VBoxContainer/Size/SizeButton" instance=ExtResource("6_dpurk")]
position = Vector2(-97, -4)
scale = Vector2(0.333333, 0.333333)

[node name="SizePrice" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Size/SizeButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("8_r68hc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 5
theme_override_styles/separator = ExtResource("9_yeq7a")

[node name="Grapes" type="HBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 243

[node name="GrapesDetails" type="VBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer/Grapes"]
layout_mode = 2
theme_override_constants/separation = -4

[node name="GrapesTitle" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Grapes/GrapesDetails"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_pn3jg")
theme_override_font_sizes/font_size = 18
text = "UNLOCK GRAPES  (0/1)"
label_settings = ExtResource("3_hdreg")

[node name="GrapesDesc" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Grapes/GrapesDetails"]
layout_mode = 2
size_flags_vertical = 0
text = "Unlock and allow the collection of grapes for 
more upgrades."
label_settings = ExtResource("4_rruh3")

[node name="GrapesButton" parent="NinePatchRect/ScrollContainer/VBoxContainer/Grapes" instance=ExtResource("5_f702u")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="Ui" parent="NinePatchRect/ScrollContainer/VBoxContainer/Grapes/GrapesButton" instance=ExtResource("6_dpurk")]
position = Vector2(-97, -4)
scale = Vector2(0.333333, 0.333333)

[node name="GrapesPrice" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Grapes/GrapesButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("8_r68hc")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_pressed" from="NinePatchRect/ScrollContainer/VBoxContainer/Speed/SpeedButton" to="." method="_on_speed_button_button_pressed"]
[connection signal="button_pressed" from="NinePatchRect/ScrollContainer/VBoxContainer/Rate/RateButton" to="." method="_on_rate_button_button_pressed"]
[connection signal="button_pressed" from="NinePatchRect/ScrollContainer/VBoxContainer/Range/RangeButton" to="." method="_on_range_button_button_pressed"]
[connection signal="button_pressed" from="NinePatchRect/ScrollContainer/VBoxContainer/Size/SizeButton" to="." method="_on_size_button_button_pressed"]
[connection signal="button_pressed" from="NinePatchRect/ScrollContainer/VBoxContainer/Grapes/GrapesButton" to="." method="_on_grapes_button_button_pressed"]
